src/objects/Application_Window_Template__c.object
<CustomObject>
    <fields>
        <fullName>Application_Window__c</fullName>
        <label>Application Window</label>
        <referenceTo>Application_Window__c</referenceTo>
        <relationshipLabel>Application Window Templates</relationshipLabel>
        <relationshipName>Application_Window_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will define which template is active and will display on the page.</description>
        <inlineHelpText>This will define which template is active and will display on the page.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <formula>Application_Window__r.Theme__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Theme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Window_Description__c</fullName>
        <label>Window Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application Window Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AWT-{0}</displayFormat>
        <label>Iteration Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Window Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>